release/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qket-release
  labels:
    name: qket-release
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
