release/networkpolicy.yaml
############################
# networkpolicy_qKet.yaml  #
# namespace: qket-release       #
############################

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow-same-namespace
  namespace: qket-release
spec:
  podSelector:
    matchLabels:
      app: qket-backend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: qket-release # 동일 namespace 안에서만 트래픽 허용
      ports:
        - port: 8080
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
